🔒️ Send a short-lived VP instead of a VC